# finfo

./: .gitignore  0000-introduzione.txt  0010-primo.c  0020-primo.s  0030-primo.s  0040-primo.c  0050-primo.c  0060-obfusc.c  0070-preprocessed.c  0080-commenti.c  0090-vardef.c  0100-vardef.c  0110-vardef.c  0120-identificativi.c  0130-printf.c  0140-printf.c  0150-printf.c  0160-printf.c  0170-printf.c  0180-printf.c  0190-uninit.c  0200-scanf.c  0210-scanf.c  0220-scanf.c  0230-scanf.c  0240-math.c  0250-rand.c  0260-rand.c  0270-myfunc.c  0300-espressioni.txt  0310-aritmetiche.c  0320-incr.c  0330-and.c  0340-and.c  0340-or.c  0350-or.c  0350-precedence.c  0350-ternario.c  0370-bitwise.c  0370-equal.c  (+200 more)
files/: parole.txt  stringhe.txt  test.ppm  trees.csv  zz.txt
